// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays the PartTypeEdit component for a new part type with no attributes 1`] = `
<React.Fragment>
  <td>
    <Icon
      as="i"
      name="add"
      onClick={[Function]}
    />
  </td>
  <td>
    <FormTextInput
      fieldName="shortName_new"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="add new"
      value="part one"
    />
    <label
      htmlFor="can_be_substituted_new"
    >
      Can Be Substituted?
    </label>
    <input
      checked={false}
      id="can_be_substituted_new"
      name="can_be_substituted_new"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="can_be_omitted_new"
    >
      Can Be Omitted?
    </label>
    <input
      checked={true}
      id="can_be_omitted_new"
      name="can_be_omitted_new"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="customer_facing_new"
    >
      Customer Facing?
    </label>
    <input
      checked={true}
      id="customer_facing_new"
      name="customer_facing_new"
      onChange={[Function]}
      type="checkbox"
    />
    Attributes: 0
  </td>
</React.Fragment>
`;

exports[`displays the PartTypeEdit component for an existing part type with attributes, detail hidden 1`] = `
<React.Fragment>
  <td>
    <Icon
      as="i"
      name="toggle right"
      onClick={[Function]}
    />
  </td>
  <td>
    <FormTextInput
      fieldName="shortName_21"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="add new"
      value="part one"
    />
    <label
      htmlFor="can_be_substituted_21"
    >
      Can Be Substituted?
    </label>
    <input
      checked={false}
      id="can_be_substituted_21"
      name="can_be_substituted_21"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="can_be_omitted_21"
    >
      Can Be Omitted?
    </label>
    <input
      checked={true}
      id="can_be_omitted_21"
      name="can_be_omitted_21"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="customer_facing_21"
    >
      Customer Facing?
    </label>
    <input
      checked={true}
      id="customer_facing_21"
      name="customer_facing_21"
      onChange={[Function]}
      type="checkbox"
    />
    Attributes: 0
  </td>
</React.Fragment>
`;

exports[`displays the PartTypeEdit component for an existing part type with attributes, detail shown 1`] = `
<React.Fragment>
  <td>
    <Icon
      as="i"
      name="toggle down"
      onClick={[Function]}
    />
  </td>
  <td>
    <FormTextInput
      fieldName="shortName_dummy2"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="add new"
      value="part one"
    />
    <label
      htmlFor="can_be_substituted_dummy2"
    >
      Can Be Substituted?
    </label>
    <input
      checked={false}
      id="can_be_substituted_dummy2"
      name="can_be_substituted_dummy2"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="can_be_omitted_dummy2"
    >
      Can Be Omitted?
    </label>
    <input
      checked={true}
      id="can_be_omitted_dummy2"
      name="can_be_omitted_dummy2"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="customer_facing_dummy2"
    >
      Customer Facing?
    </label>
    <input
      checked={true}
      id="customer_facing_dummy2"
      name="customer_facing_dummy2"
      onChange={[Function]}
      type="checkbox"
    />
    Attributes: 2
    <PartTypeAttributes
      attributes={
        Array [
          "attribute1",
          "attribute2",
        ]
      }
      handlePartTypeChange={[Function]}
      partTypeKey="dummy2"
    />
  </td>
</React.Fragment>
`;
